# hevy-mcp-rust

./: .cursorrules  .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: install-hevy-skill.sh
skills/hevy/: SKILL.md
skills/hevy/agents/: openai.yaml
src/: client.rs  main.rs  tools.rs  types.rs
tests/: cli_test.rs  client_test.rs  deserialize_test.rs  integration_test.rs
